# llm-mechanisms

./: README.md  main.py  pyproject.toml  requirements.txt
exercises/: token-encoding-decoding-visualization-and-context-analysis.ipynb
notebooks/: text-cleaning-tokenization-and-encoding-decoding.ipynb  tokenization-lexicon-construction-and-index-mapping.ipynb
