[project]
name = "llm-mechanisms"
version = "0.1.0"
description = "Hands-on notebooks for tokenization, index mapping, and simple text encoding workflows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "requests>=2.34.2",
]
